--- a/index.html
+++ b/index.html
@@ -197,13 +197,7 @@
 
       navigator.mediaDevices.getUserMedia({ audio: true })
       .then(stream => {
-        let pc = new RTCPeerConnection({
-          iceServers: [
-        { urls: 'stun:stun.l.google.com:19302' },
-        // 필요시 TURN 서버 (유료 또는 직접 구축)를 추가해야 합니다.
-        // TURN은 데이터 릴레이가 필요할 때 사용됩니다.
-    ]
-  })
+        let pc = new RTCPeerConnection({})
         pc.ontrack = function (event) {
           if (event.track.kind !== 'audio') { return }
 
